--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-10-02 16:00 -->
+    <!-- Built with 11ty - 2023-10-03 13:41 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1696262435">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1696340520">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1696262435"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1696340520"></script>
     
     <style>
     .map-label {
@@ -426,7 +426,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
 
             <div class="filter">
                 <h2>New Filter</h2>
-                <h2>Filter</h2>
+                <h2>Filter added in Gitpod on 3 oct</h2>
                 <table>
                     <tbody>
                     <tr>
