--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-10-11 12:02 -->
+    <!-- Built with 11ty - 2023-10-12 09:39 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1697025769">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1697103544">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1697025769"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1697103544"></script>
     
     <style>
     .map-label {
@@ -299,7 +299,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
         </article>
         <article>
             <div class="map-filters">
-                <h2> Map filters</h2>
+                <h2>Maps</h2>
                 <ul>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1" class="map_filter" id="checkbox1"/>
                         <label for="checkbox1">
@@ -425,10 +425,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
             </div>
 
             <div class="filter">
-                <h2>New Filter</h2>
-                <h2>Filter added in Gitpod on 3 oct</h2>
-                <h2>Filter added in Gitpod on 4 oct</h2>
-                <h2>Filter added in Gitpod on 6 oct 1.1</h2>
+                <h2>Features</h2>
 
              <div class="filter-controls">
                     <label class="switch">
