--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-10-12 17:51 -->
+    <!-- Built with 11ty - 2023-10-13 13:52 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1697133100">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1697205142">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1697133100"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1697205142"></script>
     
     <style>
     .map-label {
@@ -634,10 +634,17 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
     transition: 0.375s ease;
     color: #494949;
     margin-left: 35px; /* ensure icons not stick on left corner */
-    width: auto;
-    height: auto;
+    display: inline-block; 
+    vertical-align: middle; 
+    margin-right: 10px; 
     
   }
+/* Override the size for checkbox icon, was 4vw for both little map and feature icons  */
+  .checkbox-wrapper-1 .checkbox-icon img {
+    width: 2.2vw !important; 
+    height: 2.2vw !important; 
+}
+
   .checkbox-wrapper-1 .checkbox-icon svg {
     width: 3rem;
     height: 3rem;
