--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-10-13 13:52 -->
+    <!-- Built with 11ty - 2023-10-13 15:05 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1697205142">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1697209544">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1697205142"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1697209544"></script>
     
     <style>
     .map-label {
@@ -338,7 +338,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3" class="map_filter" id="checkbox3" />
                         <label for="checkbox3">
-                            <h3>Seller checkbox title</h3>
+                            <h3>Seller</h3>
                             <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/>
                             <p>1676</p>
                         </label>
