--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-10-27 16:24 -->
+    <!-- Built with 11ty - 2023-10-27 17:03 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1698423898">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1698426224">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1698423898"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1698426224"></script>
     
     <style>
     .map-label {
@@ -320,13 +320,13 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
               <h2>Maps</h2>
 
               <div class="filter-controls">
+                <span class="switch-label">Off</span>
                 <label class="switch">
                   <input type="checkbox" id="toggle-all-filters-one" data-featuretype="all" data-criteria="map_source" class="map_filter" data-filtervalue="12-19" />
                   <span class="slider round"></span>
                 </label>
-                <label for="toggle-all-filters-one" class="switch-label">Toggle All Filters</label>
+                <label for="toggle-all-filters-one" class="switch-label">On</label>
               </div>
-                       
 
 
                 <ul>
@@ -457,11 +457,12 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                 <h2>Features</h2>
 
              <div class="filter-controls">
+                    <span class="switch-label">Off</span>
                     <label class="switch">
                       <input type="checkbox" id="toggle-all-filters-two">
                       <span class="slider round"></span>
                     </label>
-                    <span class="switch-label">Toggle All Filters</span>
+                    <span class="switch-label">On</span>
                 </div>
 
             <div id="newFilter" class="new_filter">
@@ -813,7 +814,8 @@ input:checked + .slider:before {
 }
 
 .switch-label {
-  margin-left: 15px; /* change this margin if toggle text is too close to the icon */
+  margin-left: 10px; /* change this margin if toggle text is too close to the icon */
+  margin-right: 10px;
 }
 </style>
 
