--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-12-13 16:41 -->
+    <!-- Built with 11ty - 2023-12-13 16:54 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1702485684">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1702486460">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1702485684"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1702486460"></script>
     
     <style>
     .map-label {
@@ -134,11 +134,14 @@
                 Ut error voluptatem qui eveniet quibusdam eos unde assumenda aut dolor accusantium est iure aliquam eos
                 eligendi expedita aut minima voluptatem.</p>
         </article>
+        <div class="article_spacer">&nbsp;</div>
     </section>
+
     <section id="s-1">
         <article class="storyTitle">
             <h2>Introduction</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
         <article class="mapSlide" id="slide_2" data-slideId="2"><p>Maps of early America do not tell the whole truth. While they frequently include scales and lines of latitude, their aim was not geographical accuracy. For the British – the makers of the bulk of the maps used here – the aim was to demonstrate actual and claimed possession of territory in North-eastern North America. In the process, mapmakers captured information that reveals some of the deeper dynamics of the natural and human spaces of the known Continent. In this map, we seek to bring these stories to life by illustrating the <em>common worlds</em> of early America.</p>
 </article>
 <div class="article_spacer">&nbsp;</div><article class="mapSlide" id="slide_3" data-slideId="3"><p><strong>Settlement was fragmented and confined to a narrow strip of the Atlantic coast.</strong>
@@ -155,6 +158,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
         <article id="slide_500" data-slideId="500" class="storyTitle mapSlide">
             <h2>Homelands</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
         <article class="mapSlide" id="slide_5" data-slideId="5"><h2>1. Homelands</h2>
 <p>American history begins with the deep history of the land and its peoples as they existed long before the arrival of Europeans. British explorers were often professional soldiers who made coastal landings and moved up the dozens of rivers that led inland. They claimed possession of these spaces according to legal arguments that gave ownership of empty land to whoever occupied and ‘improved’ it. But they soon learned that the land was not empty. The Indigenous name of the place they called ‘Virginia’ is Tsenacommacah: the densely inhabited land.</p>
@@ -193,6 +197,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
         <article id="slide_600" data-slideId="600" class="storyTitle mapSlide">
             <h2>Pathways</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
         <article class="mapSlide" id="slide_14" data-slideId="14"><p><strong><em>Pathways were connections between places and peoples.</em></strong></p>
 <p>For the Haudenosaunee, the path was a powerful metaphor. It represented a connection between peoples, and defined the purposes of movement – hunting, trading, travelling to a diplomatic council or going to war. Where a diplomatic relationship was in good health, the path was described as ‘clear’ and ‘open’; and where that relationship had lapsed or been marred by conflict, the path was described as ‘grown over’, which required a diplomatic council to ‘sweep the path clean’. Paths were not interchangeable: peace and war paths were kept separate. According to the diplomat Conrad Weiser, there was ‘the usual Road that ambassadors travel’. The Haudenosaunee represented paths on wampum belts. The two- row belt (Gä•sweñta in Onondaga) used two strips of purple beads on a white ground to represent the parallel paths of the Haudenosaunee and the European peoples who settled among them. Friendship belts connected two figures with a pathway between them, symbolising free movement and open communication. Diplomatic councils began with the greeting at the Edge of the Woods and the ritual cleansing of travellers, including the removal of briars and thorns that were picked up on paths leading to the council.</p>
@@ -229,6 +234,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
         <article class="storyTitle mapSlide" id="slide_700" data-slideId="700" >
             <h2>Villagers, Settlers</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
         <article class="mapSlide" id="slide_20" data-slideId="20"><p>European claims to the conquest of the ‘new world’ were primarily intellectual, based on ideas of political, cultural, racial and technological superiority. English writers debated how colonies should be ruled, but there was a deeper question of how they were ‘rightfully’ obtained. The law of nations, the precursor to modern international law, stipulated that powers could obtain lands outside their borders by means of conquest and occupation. According to the Swiss writer Emer de Vattel, ‘When a nation takes possession of a distant country, and settles a colony there’ then this territory ‘naturally becomes part of the state, equally with its ancient possessions’.</p>
 <p>The experience of colonisation shaped British claims to the possession of territory. Writers on colonial affairs based the rightful possession of colonies on the argument that warfare with Indigenous sovereigns was the basis of ‘rightful’ conquest. Following wars between the Powhatan Confederacy and colonists in Virginia, Edward Waterhouse, secretary of the Virginia Company, stated the case for the annexation of Indigenous territory by war: ‘So that we, who have hitherto have had possession of no more ground then their waste . . . may now by right of Warre, and law of Nations, invade the Country, and destroy them who fought to destroy us: whereby we shall enjoy their cultivated places [which] shall now also be possessed entirely by us’. Over one hundred years later, William Blackstone recalled this and other conflicts and identified them as the basis of Britain’s territorial empire in North America. ‘Our American plantations [were] obtained in the last century either by a right of conquest or driving out the natives (with what natural justice I shall not at present enquire) or by treaties’.</p>
@@ -272,6 +278,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
         <article class="storyTitle mapSlide" id="slide_800" data-slideId="800" >
             <h2>Lines</h2>
         </article>
+        <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
         <article class="mapSlide" id="slide_30" data-slideId="30"><p>The Royal Charters that created colonies out of undefined expanses of territory that were claimed on the basis of discovery included expansive and unbounded descriptions of colonial space. The second Charter of Virginia (1609) stipulated that the colony included,</p>
 <p><em>all those Lands, Countries, and Territories, situate, lying, and being in that Part of America, called Virginia, from the Point of Land, called Cape or Point Comfort, all along the Sea Coast to the Northward, two hundred miles, and from the said Point of Cape Comfort, all along the Sea Coast to the Southward, two hundred Miles, and all that Space and Circuit of Land, lying from the Sea Coast of the Precinct aforesaid, up into the Land throughout from Sea to Sea, West and Northwest;</em></p>
