--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-12-13 16:54 -->
+    <!-- Built with 11ty - 2023-12-15 12:56 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1702486460">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1702645019">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1702486460"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1702645019"></script>
     
     <style>
     .map-label {
@@ -327,7 +327,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
             </p>
         </article>
 
-        <article id="half-page-filter">
+      <!-- <article id="half-page-filter">
             <button id="toggleButton" class="active">Toggle Element</button>
 
             <div id="filterContainer" class="map-filters">
@@ -862,7 +862,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                             </style>
 
 
-        </article>
+        </article>-->
 
 
     </section>
