--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-12-15 14:14 -->
+    <!-- Built with 11ty - 2023-12-15 19:39 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>About the project | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1702649680">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1702669183">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1702649680"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1702669183"></script>
     
     <style>
     .map-label {
@@ -40,9 +40,9 @@
 
 <a id="sitetitle" href="/">Movement and Common World in Early America</a>
 <nav>
-  <div id="menu">
-    <input id="legend" type="checkbox"/>
-    <label class="legend" role="button" for="legend">Menu</label>
+  <div id="mainmenu">
+    <input id="menu" type="checkbox"/>
+    <label class="menu" role="button" for="menu">Menu</label>
     <ol>
       <li> <a href="#overview">Overview</a></li>
       <li> <a href="#stories">Stories  </a>
