--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2023-12-21 18:09 -->
+    <!-- Built with 11ty - 2024-01-10 12:43 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1703182151">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1704890604">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1703182151"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1704890604"></script>
     
     <style>
     .map-label {
@@ -329,7 +329,8 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                 Choose the map images or feature icons to enable the filters you require.
             </p>
         </article>
-
+         <div class="storyTitleSpacerBelow"></div>
+         <div class="storyTitleSpacerBelow"></div>
         
 
       <!-- <article id="half-page-filter">
