--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-01-15 14:19 -->
+    <!-- Built with 11ty - 2024-01-15 14:47 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1705328347">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1705330067">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1705328347"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1705330067"></script>
     
     <style>
     .map-label {
@@ -459,7 +459,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="12"
                                class="map_filter" id="checkbox11"/>
                         <label for="checkbox11">
-                            <img src="../assets/img/map-thumbs/1755-Moll.jpg" alt="cropped image of map">span>1755 <em>Moll</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Moll.jpg" alt="cropped image of map"><span>1755 <em>Moll</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="13"
