--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-01-15 14:47 -->
+    <!-- Built with 11ty - 2024-01-15 15:19 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1705330067">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1705331968">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1705330067"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1705331968"></script>
     
     <style>
     .map-label {
@@ -198,7 +198,9 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
     <section id="s-3">
         <div class="storyTitleSpacerAbove"></div>
         <article id="slide_600" data-slideId="600" class="storyTitle mapSlide">
-            <h2>Pathways</h2>
+            <h2>Pathways
+                <span>connections between places and peoples</span>
+            </h2>
         </article>
         <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
