--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-01-15 16:32 -->
+    <!-- Built with 11ty - 2024-01-15 18:11 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1705336343">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1705342271">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1705336343"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1705342271"></script>
     
     <style>
     .map-label {
@@ -449,13 +449,13 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
                                class="map_selector" id="mapcheckbox8"/>
-                        <label for="checkbox8">
+                        <label for="mapcheckbox8">
                             <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt="cropped image of map"><span>1752 <em>Evans</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
                                class="map_selector" id="mapcheckbox9"/>
-                        <label for="checkbox9">
+                        <label for="mapcheckbox9">
                             <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt="cropped image of map"><span>1755 <em>Herbert</em></span>
                         </label>
                     </li>
