--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-13 22:36 -->
+    <!-- Built with 11ty - 2024-02-15 11:12 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1707863792">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1707995542">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1707863792"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1707995542"></script>
     
     <style>
     .map-label {
@@ -122,7 +122,7 @@
         <article class="storyTitle">
             <h2>Overview</h2>
         </article>
-        <p>Lorem ipsum dolor sit amet. Qui labore dolores qui dolores aperiam aut nihil tenetur qui cumque ipsa qui
+        <article class="mapSlide" id="slide_1" data-slideId="1"><p>Lorem ipsum dolor sit amet. Qui labore dolores qui dolores aperiam aut nihil tenetur qui cumque ipsa qui
 possimus neque et tenetur velit eos quisquam expedita. Et maxime voluptatum eum laudantium officiis eos
 nihil quae et sint inventore qui voluptatum consequatur? Sed consequuntur quia non accusamus
 perspiciatis qui deserunt porro.</p>
@@ -133,7 +133,8 @@ voluptas distinctio sit delectus assumenda non sint autem.</p>
 <p>Ut voluptatem quae qui reprehenderit rerum eos numquam saepe sit exercitationem animi sit repellat dicta.
 Ut error voluptatem qui eveniet quibusdam eos unde assumenda aut dolor accusantium est iure aliquam eos
 eligendi expedita aut minima voluptatem.</p>
-
+</article>
+<div class="article_spacer">&nbsp;</div>
 
         <div class="article_spacer">&nbsp;</div>
     </section>
