deploy: 0d0673441e537810294356edbeac4cba9a32214a

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-23 14:48 -->
+    <!-- Built with 11ty - 2024-02-23 15:06 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1708699695">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1708700797">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1708699695"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1708700797"></script>
     
     <style>
     .map-label {
@@ -355,46 +355,46 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":10, "identity":[2]}'
                    class="explore_filter" id="checkbox1"/>
             <label for="checkbox1">
-                <img src="https://static.thenounproject.com/png/717161-200.png"/><span>Placenames (Indigenous)</span>
+                <img src="https://static.thenounproject.com/png/717161-200.png" alt="" /><span>Placenames (Indigenous)</span>
             </label>
         </li>
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":10, "identity":[1]}'
                    class="explore_filter" id="checkbox2"/>
             <label for="checkbox2">
                 <img
-                        src="https://static.thenounproject.com/png/1779673-200.png"/><span>Placenames (European)</span>
+                        src="https://static.thenounproject.com/png/1779673-200.png" alt="" /><span>Placenames (European)</span>
             </label>
         </li>
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":4, "identity":[2]}'
                    class="explore_filter" id="checkbox3"/>
             <label for="checkbox3">
-                <img src="https://static.thenounproject.com/png/3957514-200.png"/><span>Settlements (Indigenous)</span>
+                <img src="https://static.thenounproject.com/png/3957514-200.png" alt="" /><span>Settlements (Indigenous)</span>
             </label>
         </li>
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":4, "identity":[1]}'
                    class="explore_filter" id="checkbox4"/>
             <label for="checkbox4">
-                <img src="https://static.thenounproject.com/png/1461154-200.png"/><span>Settlements (European)</span>
+                <img src="https://static.thenounproject.com/png/1461154-200.png" alt="" /><span>Settlements (European)</span>
             </label>
         </li>
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":13, "identity":[0]}'
                    class="explore_filter" id="checkbox5"/>
             <label for="checkbox5">
                 <img
-                        src="https://static.thenounproject.com/png/2615726-200.png"/><span>Principal Rivers</span>
+                        src="https://static.thenounproject.com/png/2615726-200.png" alt="" /><span>Principal Rivers</span>
             </label>
         </li>
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":3, "identity":[0]}'
                    class="explore_filter" id="checkbox6"/>
             <label for="checkbox6">
-                <img src="https://static.thenounproject.com/png/4256430-200.png"/><span>Pathways and Lines</span>
+                <img src="https://static.thenounproject.com/png/4256430-200.png" alt="" /><span>Pathways and Lines</span>
             </label>
         </li>
         <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter" data-filtervalue='{"sub_type":12, "identity":[0]}'
                    class="explore_filter" id="checkbox8"/>
             <label for="checkbox8">
                 <img
-                        src="https://static.thenounproject.com/png/2631029-200.png"/><span>Council Fires</span>
+                        src="https://static.thenounproject.com/png/2631029-200.png" alt="" /><span>Council Fires</span>
             </label>
         </li>
  </ol>
@@ -408,108 +408,108 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
                                class="map_selector" id="mapcheckbox1"/>
                         <label for="mapcheckbox1">
-                            <img src="../assets/img/map-thumbs/1590-White.jpg"/><span>1590 <em>White</em></span>
+                            <img src="../assets/img/map-thumbs/1590-White.jpg" alt="" /><span>1590 <em>White</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="2"
                                class="map_selector" id="mapcheckbox2"/>
                         <label for="mapcheckbox2">
                             <img
-                                    src="../assets/img/map-thumbs/1650-Bleau.jpg"/><span>1650 <em>Bleau</em></span>
+                                    src="../assets/img/map-thumbs/1650-Bleau.jpg" alt="" /><span>1650 <em>Bleau</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3"
                                class="map_selector" id="mapcheckbox3"/>
                         <label for="mapcheckbox3">
-                            <img src="../assets/img/map-thumbs/1676-Seller.jpg" alt="cropped image of map"><span>1676 <em>Seller</em></span>
+                            <img src="../assets/img/map-thumbs/1676-Seller.jpg" alt="" ><span>1676 <em>Seller</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="5"
                                class="map_selector" id="mapcheckbox4"/>
                         <label for="mapcheckbox4">
-                            <img src="../assets/img/map-thumbs/1677-Foster.jpg" alt="cropped image of map"><span>1677 <em>Foster</em></span>
+                            <img src="../assets/img/map-thumbs/1677-Foster.jpg" alt="" ><span>1677 <em>Foster</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="6"
                                class="map_selector" id="mapcheckbox5"/>
                         <label for="mapcheckbox5">
                             <img
-                                    src="../assets/img/map-thumbs/1720-Moll.jpg"/><span>1720 <em>Moll</em></span>
+                                    src="../assets/img/map-thumbs/1720-Moll.jpg" alt="" /><span>1720 <em>Moll</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="7"
                                class="map_selector" id="mapcheckbox6"/>
                         <label for="mapcheckbox6">
-                            <img src="../assets/img/map-thumbs/1738-Burghers.jpg" alt="cropped image of map"><span>1738 <em>Burghers</em></span>
+                            <img src="../assets/img/map-thumbs/1738-Burghers.jpg" alt="" ><span>1738 <em>Burghers</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
                                class="map_selector" id="mapcheckbox8"/>
                         <label for="mapcheckbox8">
-                            <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt="cropped image of map"><span>1752 <em>Evans</em></span>
+                            <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt="" ><span>1752 <em>Evans</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
                                class="map_selector" id="mapcheckbox9"/>
                         <label for="mapcheckbox9">
-                            <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt="cropped image of map"><span>1755 <em>Herbert</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt="" ><span>1755 <em>Herbert</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="11"
                                class="map_selector" id="mapcheckbox10"/>
                         <label for="mapcheckbox10">
-                            <img src="../assets/img/map-thumbs/1755-Moll.jpg"/><span>1755 <em>Moll</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Moll.jpg" alt="" /><span>1755 <em>Moll</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="12"
                                class="map_selector" id="mapcheckbox11"/>
                         <label for="mapcheckbox11">
                             <img
-                                    src="../assets/img/map-thumbs/1755-Mitchell.jpg"/><span>1755 <em>Mitchell</em></span>
+                                    src="../assets/img/map-thumbs/1755-Mitchell.jpg" alt="" /><span>1755 <em>Mitchell</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="13"
                                class="map_selector" id="mapcheckbox12"/>
                         <label for="mapcheckbox12">
-                            <img src="../assets/img/map-thumbs/1772-Bowen.jpg"/><span>1772 <em>Bowen</em></span>
+                            <img src="../assets/img/map-thumbs/1772-Bowen.jpg" alt="" /><span>1772 <em>Bowen</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="14"
                                class="map_selector" id="mapcheckbox13"/>
                         <label for="mapcheckbox13">
-                            <img src="../assets/img/map-thumbs/1774-Jefferys.jpg"/><span>1774 <em>Jefferys</em></span>
+                            <img src="../assets/img/map-thumbs/1774-Jefferys.jpg" alt="" /><span>1774 <em>Jefferys</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="15"
                                class="map_selector" id="mapcheckbox14"/>
                         <label for="mapcheckbox14">
                             <img
-                                    src="../assets/img/map-thumbs/1778-Hutchins.jpg"/><span>1778 <em>Hutchins</em></span>
+                                    src="../assets/img/map-thumbs/1778-Hutchins.jpg" alt="" /><span>1778 <em>Hutchins</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="16"
                                class="map_selector" id="mapcheckbox15"/>
                         <label for="mapcheckbox15">
-                            <img src="../assets/img/map-thumbs/1783-Cary.jpg"/><span>1783 <em>Cary</em></span>
+                            <img src="../assets/img/map-thumbs/1783-Cary.jpg" alt="" /><span>1783 <em>Cary</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="17"
                                class="map_selector" id="mapcheckbox16"/>
                         <label for="mapcheckbox16">
-                            <img src="../assets/img/map-thumbs/1784-Buell.jpg"/><span>1784 <em>Buell</em></span>
+                            <img src="../assets/img/map-thumbs/1784-Buell.jpg" alt="" /><span>1784 <em>Buell</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="18"
                                class="map_selector" id="mapcheckbox17"/>
                         <label for="mapcheckbox17">
                             <img
-                                    src="../assets/img/map-thumbs/1794-Russell.jpg"/><span>1794 <em>Russell</em></span>
+                                    src="../assets/img/map-thumbs/1794-Russell.jpg" alt="" /><span>1794 <em>Russell</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="19"
                                class="map_selector" id="mapcheckbox18"/>
                         <label for="mapcheckbox18">
-                            <img src="../assets/img/map-thumbs/1796-Bradley.jpg"/><span>1796 <em>Bradley</em></span>
+                            <img src="../assets/img/map-thumbs/1796-Bradley.jpg" alt="" /><span>1796 <em>Bradley</em></span>
                         </label>
                     </li>
 
