deploy: 9a269cc4c97d77b45cca9be6429cf8d9a6fb7155

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-23 15:30 -->
+    <!-- Built with 11ty - 2024-02-23 15:37 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1708702229">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1708702651">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1708702229"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1708702651"></script>
     
     <style>
     .map-label {
@@ -347,7 +347,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
 <section>
  <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/7 Selected</em></h3>
  <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
-<label for="selectall">Select All</label></span>
+<label for="selectallFeatures">Select All</label></span>
  </header>
 
  <ol>
@@ -402,7 +402,7 @@ Indigenous peoples are a constant presence in British maps. When mapmakers portr
  <section>
      <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/17 Selected</em></h3>
  <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
-<label for="selectall">Select All</label></span>
+<label for="selectallMaps">Select All</label></span>
  </header>
                 <ol>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
