deploy: 2b86eefea1f3f0b6aec927d9ac320be428786764

--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-23 17:20 -->
+    <!-- Built with 11ty - 2024-02-29 15:24 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Accessibility Statement for My Default Site | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1708708843">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709220269">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1708708843"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709220269"></script>
     
     <style>
     .map-label {
@@ -81,10 +81,10 @@
 </header>
 
 
-    <p>This statement applies to the My Default Site site ().</p>
-<p>This website is run by <a href="https://kdl.kcl.ac.uk">King's Digital Lab, King's College London (KDL)</a> in collaboration with the <a href="https://www.ed.ac.uk/">University of Edinburgh</a>. We want as many people as possible to be able to use this website. For example, that means you should be able to:</p>
+    <p>This statement applies to the BCC: Brightening the Covenant Chain (https://bcc-dev.kdl.kcl.ac.uk/).</p>
+<p>This website is run by <a href="https://kdl.kcl.ac.uk">King's Digital Lab, King's College London (KDL)</a>. We want as many people as possible to be able to use this website. For example, that means you should be able to:</p>
 <ul>
-<li>zoom in up to 300% without the text spilling off the screen</li>
+<li>zoom in up to 200% without the text spilling off the screen</li>
 <li>navigate most of the website using just a keyboard</li>
 <li>listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)</li>
 </ul>
@@ -103,16 +103,15 @@
 <p>KDL looking at fixes and alternatives to the issues listed in the &quot;<a href="#how">How accessible this website is</a>&quot; section.
 In particular we plan to fix the images issue by the end of October 2022.</p>
 <h2>Preparation of this accessibility statement</h2>
-<p>This statement was prepared on 7 July 2022. It was <strong>last reviewed on 11 July 2022</strong>.</p>
-<p>This website was last tested on 7 July 2022. The test was carried out by KDL.</p>
+<p>This statement was prepared on 7 July 2022. It was <strong>last reviewed on 29 February 2024</strong>.</p>
+<p>This website was last tested on 14 February 2024. The test was carried out by KDL.</p>
 <p>We used this approach to decide on a sample of pages to test:</p>
 <ul>
 <li>The <a href="/">Homepage</a></li>
-<li>The <a href="/books/">Books</a> page</li>
-<li>The <a href="/about/">About</a> page</li>
-<li>The <a href="/posts/">Blog &amp; News</a> page</li>
-<li>The <a href="/credits/">Credits &amp; Acknowledgements</a> page</li>
+<li>The <a href="/stories/">Map Story</a> page</li>
+<li>The <a href="/accessibility/">Accessibility Statement</a> page</li>
 </ul>
+<p>Note: At the time of testing (14 February 2024) some static pages were not available (About, Team, Recourses, Credits &amp; Acknowledgements)</p>
 <p>This page is based on the <a href="https://www.gov.uk/government/publications/sample-accessibility-statement/sample-accessibility-statement-for-a-fictional-public-sector-website">sample template</a> provided by gov.uk.</p>
 
     <footer class="footer">
