deploy: 297ce7188039c8d5277598f3f79fc4b66cb81fa6

--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-29 15:24 -->
+    <!-- Built with 11ty - 2024-02-29 15:35 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Accessibility Statement for My Default Site | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709220269">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709220921">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709220269"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709220921"></script>
     
     <style>
     .map-label {
@@ -93,7 +93,34 @@
 <h2><a id="how"></a>How accessible this website is</h2>
 <p>We know some part of this website are not fully accessible:</p>
 <ul>
-<li>Dynamic content is handled with <a href="https://vuejs.org/">VueJS</a> and we are aware that the rendered HTML includes custom tags that don't pass the <a href="https://validator.w3.org/">W3 Validator</a>. This may interfere with assistive technologies. We are still in the process of assessing the site and plan to ensure all important content, if not all, is accessible.</li>
+<li>
+<p>The Filter and Legend sections cannot be navigated using keyboard tabbing, making them not accessible for keyboard only users;</p>
+</li>
+<li>
+<p>Menu items can be selected with keyboard navigation even when the menu is closed, which may not clearly indicate the navigation position to users;</p>
+</li>
+<li>
+<p>The order of keyboard tabbing may confuse some users. For example, users have to navigate through bottom elements on the page first before the main navigation bar receive focus;</p>
+</li>
+<li>
+<p>The map currently does not support keyboard interaction, making data points (polygons) and tooltips inaccessible via keyboard. We expect to advise users of this limitation in our map usage instructions and explore solutions to enhance accessibility;</p>
+</li>
+<li>
+<p>The navigation bar labels on the top may not fit properly in their tabs in 200% zooming, which could be confusing. It may not be working consistently across all browsers. We expect to make design adjustments for a smoother experience;</p>
+</li>
+<li>
+<p>The Filter section may not close properly in 200% zooming, and toggle controls become hard to access due to screen size and zoom settings. Additionally, Map Story, Filter and Legend sections overlap when expanded, making it challenging for users to read both the text and symbols;</p>
+</li>
+<li>
+<p>Some map polygons, particularly green circles, are not clearly visible and do not stand out well against the map background. This concern is part of our ongoing design optimization, we aim to improve map visibility and contrast;</p>
+</li>
+<li>
+<p>The text selection is currently disabled on Map Story, limiting how users interact with content. We're exploring solutions like offering alternative formats, such as downloadable PDF, for easier access;</p>
+</li>
+<li>
+<p>The map tooltips remain clickable and appear behind the text layer, which might confuse users. We're working on better management of the text and map layers to ensure clear functionality and content visibility;
+We are aware of missing alternative text and captions of images. The team aims to add them to all images and improve understanding for all users;</p>
+</li>
 </ul>
 <h2>Reporting accessibility problems with this website</h2>
 <p>Please email Jo.Edge@ed.ac.uk with details of the problems.</p>
