deploy: 2dd16823c149b29e9499a6b228731e91ce9d04f9

--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-29 15:35 -->
+    <!-- Built with 11ty - 2024-02-29 17:51 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Accessibility Statement for My Default Site | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709220921">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709229070">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709220921"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709229070"></script>
     
     <style>
     .map-label {
@@ -120,6 +120,9 @@
 <li>
 <p>The map tooltips remain clickable and appear behind the text layer, which might confuse users. We're working on better management of the text and map layers to ensure clear functionality and content visibility;
 We are aware of missing alternative text and captions of images. The team aims to add them to all images and improve understanding for all users;</p>
+</li>
+<li>
+<p>We are aware there are limitations to the functionality and accessibility of the majority of the content on small screens. At this stage, mobile and responsive design have not been the main focus of our development efforts, which means users may encounter some elements and features that do not display or function well on mobile devices or smaller screens. For now, for the best and most comprehensive experience, we recommend accessing our project on a desktop machine. This will ensure users can fully engage with all the features and content as intended;</p>
 </li>
 </ul>
 <h2>Reporting accessibility problems with this website</h2>
