--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -1,22 +1,22 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-02-29 17:51 -->
+    <!-- Built with 11ty - 2024-03-06 16:58 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
     
     <meta property="og:image" content="https://bcc.kdl.kcl.ac.uk/assets/img/logos/KCL-square.svg">
     <meta property="og:description" content="">
-    <meta property="og:title" content="Accessibility Statement for My Default Site">
+    <meta property="og:title" content="Accessibility Statement for BCC: Brightening the Covenant Chain">
 
 
-    <title>Accessibility Statement for My Default Site | BCC - Treatied Spaces</title>
+    <title>Accessibility Statement for BCC: Brightening the Covenant Chain | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709229070">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1709744287">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"  />
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"  />    
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709229070"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1709744287"></script>
     
     <style>
     .map-label {
@@ -91,13 +91,16 @@
 <p>We’ve also made the website text as simple as possible to understand.</p>
 <p><a href="https://mcmw.abilitynet.org.uk/">AbilityNet</a> has advice on making your device easier to use if you have a disability.</p>
 <h2><a id="how"></a>How accessible this website is</h2>
-<p>We know some part of this website are not fully accessible:</p>
+<p>We know some part of this website are not fully accessible. The issues detailed below apply to the Map Story page, except for the menu issue, which is relevant to the entire website.</p>
 <ul>
 <li>
-<p>The Filter and Legend sections cannot be navigated using keyboard tabbing, making them not accessible for keyboard only users;</p>
-</li>
+<p>Keyboard</p>
+<ul>
 <li>
 <p>Menu items can be selected with keyboard navigation even when the menu is closed, which may not clearly indicate the navigation position to users;</p>
+</li>
+<li>
+<p>The Filter and Legend sections cannot be navigated using keyboard tabbing, making them not accessible for keyboard only users;</p>
 </li>
 <li>
 <p>The order of keyboard tabbing may confuse some users. For example, users have to navigate through bottom elements on the page first before the main navigation bar receive focus;</p>
@@ -105,11 +108,24 @@
 <li>
 <p>The map currently does not support keyboard interaction, making data points (polygons) and tooltips inaccessible via keyboard. We expect to advise users of this limitation in our map usage instructions and explore solutions to enhance accessibility;</p>
 </li>
+</ul>
+</li>
+<li>
+<p>Zooming</p>
+<ul>
 <li>
 <p>The navigation bar labels on the top may not fit properly in their tabs in 200% zooming, which could be confusing. It may not be working consistently across all browsers. We expect to make design adjustments for a smoother experience;</p>
 </li>
 <li>
 <p>The Filter section may not close properly in 200% zooming, and toggle controls become hard to access due to screen size and zoom settings. Additionally, Map Story, Filter and Legend sections overlap when expanded, making it challenging for users to read both the text and symbols;</p>
+</li>
+</ul>
+</li>
+<li>
+<p>Smaller screen</p>
+<ul>
+<li>We are aware there are limitations to the functionality and accessibility of the majority of the content on small screens. At this stage, mobile and responsive design have not been the main focus of our development efforts, which means users may encounter some elements and features that do not display or function well on mobile devices or smaller screens. For now, for the best and most comprehensive experience, we recommend accessing our project on a desktop machine. This will ensure users can fully engage with all the features and content as intended;</li>
+</ul>
 </li>
 <li>
 <p>Some map polygons, particularly green circles, are not clearly visible and do not stand out well against the map background. This concern is part of our ongoing design optimization, we aim to improve map visibility and contrast;</p>
@@ -121,17 +137,14 @@
 <p>The map tooltips remain clickable and appear behind the text layer, which might confuse users. We're working on better management of the text and map layers to ensure clear functionality and content visibility;
 We are aware of missing alternative text and captions of images. The team aims to add them to all images and improve understanding for all users;</p>
 </li>
-<li>
-<p>We are aware there are limitations to the functionality and accessibility of the majority of the content on small screens. At this stage, mobile and responsive design have not been the main focus of our development efforts, which means users may encounter some elements and features that do not display or function well on mobile devices or smaller screens. For now, for the best and most comprehensive experience, we recommend accessing our project on a desktop machine. This will ensure users can fully engage with all the features and content as intended;</p>
-</li>
 </ul>
 <h2>Reporting accessibility problems with this website</h2>
-<p>Please email Jo.Edge@ed.ac.uk with details of the problems.</p>
+<p>Please email paul.caton@kcl.ac.uk with details of the problems.</p>
 <h2>Compliance status</h2>
 <p>This website is partially compliant with the Web Content Accessibility Guidelines version 2.1 AA standard, due to the non-compliances listed above and the work in progress still happening on the site.</p>
 <h2>What we’re doing to improve accessibility</h2>
 <p>KDL looking at fixes and alternatives to the issues listed in the &quot;<a href="#how">How accessible this website is</a>&quot; section.
-In particular we plan to fix the images issue by the end of October 2022.</p>
+In particular we plan to fix the images issue later in 2024.</p>
 <h2>Preparation of this accessibility statement</h2>
 <p>This statement was prepared on 7 July 2022. It was <strong>last reviewed on 29 February 2024</strong>.</p>
 <p>This website was last tested on 14 February 2024. The test was carried out by KDL.</p>
